force-app/main/default/objects/Performance_Tracker__c/Performance_Tracker__c.object-meta.xml
<CustomObject>
    <description>This object is used to track performance data for all boat and motor water tests</description>
    <label>Performance Tracker</label>
    <nameField>
        <displayFormat>PERF - {00000}</displayFormat>
        <label>Performance Test Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>