force-app/main/default/objects/Performance_Tracker__c/fields/Boat_Model_Tested__c.field-meta.xml
<CustomField>
    <fullName>Boat_Model_Tested__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the boat model being tested</description>
    <inlineHelpText>Indicates the boat model being tested</inlineHelpText>
    <label>Boat Model Tested</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordTypeId</field>
            <operation>equals</operation>
            <value>Boat</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Performance Tracker</relationshipLabel>
    <relationshipName>Performance_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>