force-app/main/default/objects/Performance_Tracker__c/fields/Engine_Hole_Number__c.field-meta.xml
<CustomField>
    <fullName>Engine_Hole_Number__c</fullName>
    <description>Indicates the hole on the motor bracket which was bolted through to install the motor - NOTE: The hole closest to the top would be considered Hole 1  ***</description>
    <inlineHelpText>Indicates the hole on the motor bracket which was bolted through to install the motor - NOTE: The hole closest to the top would be considered Hole 1  ***</inlineHelpText>
    <label>Engine Hole Number</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>