force-app/main/default/objects/Performance_Tracker__c/fields/Max_RPM__c.field-meta.xml
<CustomField>
    <fullName>Max_RPM__c</fullName>
    <description>Maximum RPM achieved with the tested propeller boat package and propeller</description>
    <label>Max RPM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4000</fullName>
            </value>
            <value>
                <fullName>4100</fullName>
            </value>
            <value>
                <fullName>4200</fullName>
            </value>
            <value>
                <fullName>4300</fullName>
            </value>
            <value>
                <fullName>4400</fullName>
            </value>
            <value>
                <fullName>4500</fullName>
            </value>
            <value>
                <fullName>4600</fullName>
            </value>
            <value>
                <fullName>4700</fullName>
            </value>
            <value>
                <fullName>4800</fullName>
            </value>
            <value>
                <fullName>4900</fullName>
            </value>
            <value>
                <fullName>5000</fullName>
            </value>
            <value>
                <fullName>5100</fullName>
            </value>
            <value>
                <fullName>5200</fullName>
            </value>
            <value>
                <fullName>5300</fullName>
            </value>
            <value>
                <fullName>5400</fullName>
            </value>
            <value>
                <fullName>5500</fullName>
                <default>true</default>
                <label>5500</label>
            </value>
            <value>
                <fullName>5600</fullName>
            </value>
            <value>
                <fullName>5700</fullName>
            </value>
            <value>
                <fullName>5800</fullName>
            </value>
            <value>
                <fullName>5900</fullName>
            </value>
            <value>
                <fullName>6000</fullName>
            </value>
            <value>
                <fullName>6100</fullName>
            </value>
            <value>
                <fullName>6200</fullName>
            </value>
            <value>
                <fullName>6300</fullName>
            </value>
            <value>
                <fullName>6400</fullName>
            </value>
            <value>
                <fullName>6500</fullName>
            </value>
            <value>
                <fullName>6600</fullName>
            </value>
            <value>
                <fullName>6700</fullName>
            </value>
            <value>
                <fullName>6800</fullName>
            </value>
            <value>
                <fullName>6900</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>