force-app/main/default/objects/Performance_Tracker__c/fields/Max_Speed__c.field-meta.xml
<CustomField>
    <fullName>Max_Speed__c</fullName>
    <description>The maximum speed reached with the tested boat, motor, propeller combination in MPH</description>
    <inlineHelpText>The maximum speed reached in MPH</inlineHelpText>
    <label>Max Speed (MPH)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10 MPH</fullName>
            </value>
            <value>
                <fullName>11 MPH</fullName>
            </value>
            <value>
                <fullName>12 MPH</fullName>
            </value>
            <value>
                <fullName>13 MPH</fullName>
            </value>
            <value>
                <fullName>14 MPH</fullName>
            </value>
            <value>
                <fullName>15 MPH</fullName>
            </value>
            <value>
                <fullName>16 MPH</fullName>
            </value>
            <value>
                <fullName>17 MPH</fullName>
            </value>
            <value>
                <fullName>18 MPH</fullName>
            </value>
            <value>
                <fullName>19 MPH</fullName>
            </value>
            <value>
                <fullName>20 MPH</fullName>
            </value>
            <value>
                <fullName>21 MPH</fullName>
            </value>
            <value>
                <fullName>22 MPH</fullName>
            </value>
            <value>
                <fullName>23 MPH</fullName>
            </value>
            <value>
                <fullName>24 MPH</fullName>
            </value>
            <value>
                <fullName>25 MPH</fullName>
            </value>
            <value>
                <fullName>26 MPH</fullName>
            </value>
            <value>
                <fullName>27 MPH</fullName>
            </value>
            <value>
                <fullName>28 MPH</fullName>
            </value>
            <value>
                <fullName>29 MPH</fullName>
            </value>
            <value>
                <fullName>30 MPH</fullName>
                <default>true</default>
                <label>30 MPH</label>
            </value>
            <value>
                <fullName>31 MPH</fullName>
            </value>
            <value>
                <fullName>32 MPH</fullName>
            </value>
            <value>
                <fullName>33 MPH</fullName>
            </value>
            <value>
                <fullName>34 MPH</fullName>
            </value>
            <value>
                <fullName>35 MPH</fullName>
            </value>
            <value>
                <fullName>36 MPH</fullName>
            </value>
            <value>
                <fullName>37 MPH</fullName>
            </value>
            <value>
                <fullName>38 MPH</fullName>
            </value>
            <value>
                <fullName>39 MPH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>