force-app/main/default/objects/Performance_Tracker__c/fields/Motor_Tested__c.field-meta.xml
<CustomField>
    <fullName>Motor_Tested__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the motor model tested</description>
    <inlineHelpText>Indicates the motor model tested</inlineHelpText>
    <label>Motor Tested</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordTypeId</field>
            <operation>equals</operation>
            <value>Motor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Performance Tracker (Motor Tested)</relationshipLabel>
    <relationshipName>Performance_Tracker1</relationshipName>
    <type>Lookup</type>
</CustomField>