force-app/main/default/objects/Performance_Tracker__c/fields/Number_of_People__c.field-meta.xml
<CustomField>
    <fullName>Number_of_People__c</fullName>
    <description>Indicates the number of people in the boat at time of testing</description>
    <inlineHelpText>Indicates the number of people in the boat at time of testing</inlineHelpText>
    <label>Number of People</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
                <default>true</default>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>