force-app/main/default/objects/Performance_Tracker__c/fields/Propeller_Tested__c.field-meta.xml
<CustomField>
    <fullName>Propeller_Tested__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the propeller that was tested on the boat and motor combination</description>
    <inlineHelpText>Indicates the propeller that was tested on the boat and motor combination</inlineHelpText>
    <label>Propeller Tested</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordTypeId</field>
            <operation>equals</operation>
            <value>Part</value>
        </filterItems>
        <filterItems>
            <field>Product2.Family</field>
            <operation>equals</operation>
            <value>Propellers</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Performance Tracker (Propeller Tested)</relationshipLabel>
    <relationshipName>Performance_Tracker2</relationshipName>
    <type>Lookup</type>
</CustomField>