force-app/main/default/objects/Performance_Tracker__c/fields/Time_to_Plane__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Plane__c</fullName>
    <description>Indicates the amount of time it to for the boat, motor propeller combination to get on plane measured in seconds</description>
    <inlineHelpText>Indicates the amount of time it to for the boat, motor propeller combination to get on plane measured in seconds</inlineHelpText>
    <label>Time to Plane (Seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>